# src/main/java/com/example/libraryviewerbackend/controller/UserController.java
@@ -3,8 +3,11 @@ package com.example.libraryviewerbackend.controller;
 import com.example.libraryviewerbackend.service.UserService;
 import com.openapi.gen.springboot.api.UserApiController;
 import com.openapi.gen.springboot.dto.UserDTO;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 public class UserController extends UserApiController {
@@ -14,6 +17,8 @@ public class UserController extends UserApiController {
     public UserController(UserService userService) {
         super(null);
         //TODO co zrobić z tym konstruktorem?
+        //TODO pełen CRUD dla usera
+        //TODO wrzucenie postgresa na dockera
         this.userService = userService;
     }
 
@@ -22,4 +27,24 @@ public class UserController extends UserApiController {
         return ResponseEntity.ok(userService.saveUser(userDTO));
     }
 
+    @Override
+    public ResponseEntity<UserDTO> createUserWithId(Integer id, UserDTO userDTO) {
+        return ResponseEntity.status(HttpStatus.OK).body(userService.saveUserWithId(userDTO, id));
+    }
+
+    @Override
+    public ResponseEntity<UserDTO> getUserById(Integer id) {
+        return ResponseEntity.ok(userService.getUserById(id));
+    }
+
+    @Override
+    public ResponseEntity<List<UserDTO>> getAllUsers() {
+        return ResponseEntity.ok(userService.getAllUsers());
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteUserById(Integer id) {
+        userService.deleteUserById(id);
+        return ResponseEntity.noContent().build();
+    }
 }
