# src/main/resources/swagger/api.yml
@@ -13,7 +13,7 @@ paths:
 
   /user:
     post:
-      summary: Create User object
+      summary: Create User object with generated ID
       operationId: createUser
       requestBody:
         content:
@@ -27,6 +27,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserDTO'
+        400:
+          description: BAD REQUEST
+          content:
+            application/json:
+              schema:
+                type: string
 
   /user/{id}:
     get:
@@ -38,7 +44,7 @@ paths:
           description: Unique Id of an User
           required: true
           schema:
-            type: string
+            type: integer
             format: int32
       responses:
         200:
@@ -47,6 +53,57 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserDTO'
+    delete:
+        summary: Delete User by Id
+        operationId: deleteUserById
+        parameters:
+          - name: id
+            in: path
+            description: Unique Id of an User
+            required: true
+            schema:
+                type: integer
+                format: int32
+        responses:
+            204:
+              description: OK
+    post:
+      summary: Create User object specified ID
+      operationId: createUserWithId
+      parameters:
+        - name: id
+          in: path
+          description: Unique Id of an User
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserDTO'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDTO'
+
+  /user/all:
+    get:
+      summary: Get all Users
+      operationId: getAllUsers
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserDTO'
 
 components:
   schemas:
@@ -57,7 +114,7 @@ components:
         - email
       properties:
         id:
-          type: string
+          type: integer
           format: int32
         email:
           type: string
